mkdocs-material-2.7.0 (2018-03-06)

  * Added ability to set absolute URL for logo

mkdocs-material-2.6.6 (2018-02-22)

  * Added preconnect for Google Fonts for faster loading
  * Fixed #710: With tabs sidebar disappears if JavaScript is not available

mkdocs-material-2.6.5 (2018-02-22)

  * Reverted --dev-addr flag removal from Dockerfile

mkdocs-material-2.6.4 (2018-02-21)

  * Added Catalan translations
  * Fixed incorrect margins for buttons in Firefox and Safari
  * Replaced package manager yarn with npm 5.6
  * Reverted GitHub stars rounding method
  * Removed --dev-addr flag from Dockerfile for Windows compatibility

mkdocs-material-2.6.3 (2018-02-18)

  * Added Vietnamese translations

mkdocs-material-2.6.2 (2018-02-12)

  * Added Arabic translations
  * Fixed incorrect rounding of amount of GitHub stars
  * Fixed double-layered borders for tables

mkdocs-material-2.6.1 (2018-02-11)

  * Added ability to override Disqus integration using metadata
  * Fixed #690: Duplicate slashes in source file URLs
  * Fixed #696: Active page highlight not working with default palette
  * Adjusted German translations

mkdocs-material-2.6.0 (2018-02-02)

  * Moved default search configuration to default translation (English)
  * Added support to automatically set text direction from translation
  * Added support to disable search stop word filter in translation
  * Added support to disable search trimmer in translation
  * Added Persian translations
  * Fixed support for Polish search
  * Fixed disappearing GitHub, GitLab and Bitbucket repository icons

mkdocs-material-2.5.5 (2018-01-31)

  * Added Hungarian translations

mkdocs-material-2.5.4 (2018-01-29)

  * Fixed #683: gh-deploy fails inside Docker

mkdocs-material-2.5.3 (2018-01-25)

  * Added Ukrainian translations

mkdocs-material-2.5.2 (2018-01-22)

  * Added default search language mappings for all localizations
  * Fixed #673: Error loading non-existent search language