@@ -1,0 +1,45 @@
+<!--
+  Copyright (c) 2016-2018 Martin Donath <martin.donath@squidfunk.com>
+
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the "Software"), to
+  deal in the Software without restriction, including without limitation the
+  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+  sell copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be included in
+  all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+  IN THE SOFTWARE.
+-->
+
+<!-- Translations: Hebrew -->
+{% macro t(key) %}{{ {
+  "language": "he",
+  "direction": "rtl",
+  "clipboard.copy": "העתק ללוח",
+  "clipboard.copied": "הועתק ללוח",
+  "edit.link.title": "ערוך דף זה",
+  "footer.previous": "קודם",
+  "footer.next": "הַבָּא",
+  "meta.comments": "הערות",
+  "meta.source": "מָקוֹר",
+  "search.language": "",
+  "search.pipeline.stopwords": false,
+  "search.pipeline.trimmer": false,
+  "search.placeholder": "לחפש",
+  "search.result.placeholder": "הקלד כדי להתחיל לחפש",
+  "search.result.none": "אין מסמכים תואמים",
+  "search.result.one": "1 מסמך תואם",
+  "search.result.other": "# מסמך תואם",
+  "skip.link.title": "דלג לתוכן",
+  "source.link.title": "עבור אל מאגר",
+  "toc.title": "תוכן העניינים"
+}[key] }}{% endmacro %}
